# the-greatest-team

./: .gitignore  ANN_create.py  ANN_use.py  README.md  gridSearch.py  modelsTesting.py  pyproject.toml  requirements.txt  visualizations.ipynb
backend/: .cache  app.py
backend/llm/: llm_query.py
bolt_frontend/: package-lock.json  package.json
bolt_frontend/src/: App.tsx
bolt_frontend/src/components/: SearchForm.tsx  SongItem.tsx  SongList.tsx
bolt_frontend/src/services/: api.ts
bolt_frontend/src/types/: song.ts
frontEnd/: README.md  index.html
llm/: fine_tuning.jsonl  llm_query.py  song_db.py
neural_network/: best_model.keras
nextjsfrontend/: next.config.js
nextjsfrontend/app/: page.tsx
nextjsfrontend/components/recommender/: SongList.tsx
notebooks/: stacked_model_exploration.ipynb  visualizations.ipynb
utils/: data_visualizations.py  xgboost_model_analysis.ipynb
