[project]
name = "the-greatest-team"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keras-tuner>=1.4.7",
    "keras>=3.7.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "xgboost>=2.1.2",
]
